WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82525
[Qt][WK2] Direct composited image assignment doesn't work
https://bugs.webkit.org/show_bug.cgi?id=82525
Summary
[Qt][WK2] Direct composited image assignment doesn't work
Noam Rosenthal
Reported
2012-03-28 14:04:36 PDT
[Qt][WK2] Direct composited image assignment doesn't work
Attachments
Patch
(2.74 KB, patch)
2012-03-28 15:11 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.32 KB, patch)
2012-03-29 15:01 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.87 KB, patch)
2012-03-29 15:16 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2012-03-28 15:11:14 PDT
Created
attachment 134416
[details]
Patch
Jocelyn Turcotte
Comment 2
2012-03-29 05:07:03 PDT
Comment on
attachment 134416
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=134416&action=review
LGTM, just one thing.
> Source/WebKit2/UIProcess/WebLayerTreeRenderer.cpp:-176 > - bool needsToUpdateImageTiles = layerInfo.imageIsUpdated || (layerInfo.contentsRect != layer->contentsRect() && layerInfo.imageBackingStoreID);
Please remove imageIsUpdated from WebLayerInfo::flags
Noam Rosenthal
Comment 3
2012-03-29 15:01:40 PDT
Created
attachment 134674
[details]
Patch for landing
Noam Rosenthal
Comment 4
2012-03-29 15:16:08 PDT
Created
attachment 134680
[details]
Patch for landing
WebKit Review Bot
Comment 5
2012-03-29 17:21:18 PDT
Comment on
attachment 134680
[details]
Patch for landing Clearing flags on attachment: 134680 Committed
r112617
: <
http://trac.webkit.org/changeset/112617
>
WebKit Review Bot
Comment 6
2012-03-29 17:21:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug