[Qt][WK2] Direct composited image assignment doesn't work https://bugs.webkit.org/show_bug.cgi?id=82525

Reviewed by Kenneth Rohde Christiansen.

We don't need to check whether the image or contentsRect are updated,
since assignImageToLayer is a cheap operation after the LayerBackingStore
refactor.

* UIProcess/WebLayerTreeRenderer.cpp:
(WebKit::WebLayerTreeRenderer::setLayerChildren):
(WebKit::WebLayerTreeRenderer::setLayerState):
(WebKit::WebLayerTreeRenderer::renderNextFrame):


Canonical link: https://commits.webkit.org/100014@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112617 268f45cc-cd09-0410-ab3c-d52691b4dbfc